--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,5 @@
 *.TIF filter=lfs diff=lfs merge=lfs -text
 *.tiff filter=lfs diff=lfs merge=lfs -text
 *.dbf filter=lfs diff=lfs merge=lfs -text
+data/processed/*.tif filter=lfs diff=lfs merge=lfs -text
+data/population/*.tif filter=lfs diff=lfs merge=lfs -text
