added shivanis work by shreyas with LFS

--- a/.gitattributes
+++ b/.gitattributes
@@ -4,3 +4,4 @@
 *.dbf filter=lfs diff=lfs merge=lfs -text
 data/processed/*.tif filter=lfs diff=lfs merge=lfs -text
 data/population/*.tif filter=lfs diff=lfs merge=lfs -text
+*.npz filter=lfs diff=lfs merge=lfs -text
